eda - remove duplicate articles

--- a/src/recommendations_with_ibm.ipynb
+++ b/src/recommendations_with_ibm.ipynb
@@ -460,24 +460,69 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
-   "metadata": {
-    "collapsed": true
-   },
-   "outputs": [],
+   "execution_count": 51,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "Index(['doc_body', 'doc_description', 'doc_full_name', 'doc_status',\n",
+       "       'article_id'],\n",
+       "      dtype='object')"
+      ]
+     },
+     "execution_count": 51,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
-    "# Find and explore duplicate articles"
+    "df_content.columns"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 60,
    "metadata": {
     "collapsed": true
    },
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "5 duplicate articles\n"
+     ]
+    }
+   ],
    "source": [
-    "# Remove any rows that have the same article_id - only keep the first"
+    "# Find and explore duplicate articles\n",
+    "duplicated_articles = df_content[df_content.duplicated(subset='article_id')].sum().count()\n",
+    "print(f'{duplicated_articles} duplicate articles')"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 61,
+   "metadata": {
+    "collapsed": true
+   },
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "(1051, 5)"
+      ]
+     },
+     "execution_count": 61,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "# Remove any rows that have the same article_id - only keep the first\n",
+    "df_content_clean = df_content.drop_duplicates(\"article_id\", keep=\"first\")\n",
+    "df_content_clean.shape"
    ]
   },
   {
