Part I : Exploratory Data Analysis

--- a/src/recommendations_with_ibm.ipynb
+++ b/src/recommendations_with_ibm.ipynb
@@ -28,7 +28,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -40,7 +40,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 4,
    "metadata": {
     "collapsed": true
    },
@@ -54,7 +54,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 38,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [
     {
@@ -142,7 +142,7 @@
        "4  f01220c46fc92c6e6b161b1849de11faacd7ccb2  "
       ]
      },
-     "execution_count": 38,
+     "execution_count": 5,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -156,7 +156,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 39,
+   "execution_count": 6,
    "metadata": {
     "collapsed": true
    },
@@ -265,7 +265,7 @@
        "4      Analyze NY Restaurant data using Spark in DSX       Live           4  "
       ]
      },
-     "execution_count": 39,
+     "execution_count": 6,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -290,7 +290,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 7,
    "metadata": {
     "collapsed": true
    },
@@ -368,7 +368,7 @@
        "max     364.000000"
       ]
      },
-     "execution_count": 12,
+     "execution_count": 7,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -381,7 +381,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 29,
+   "execution_count": 8,
    "metadata": {},
    "outputs": [
     {
@@ -406,7 +406,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 49,
+   "execution_count": 9,
    "metadata": {},
    "outputs": [
     {
@@ -427,7 +427,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 47,
+   "execution_count": 10,
    "metadata": {
     "collapsed": true
    },
@@ -460,7 +460,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 51,
+   "execution_count": 11,
    "metadata": {},
    "outputs": [
     {
@@ -471,7 +471,7 @@
        "      dtype='object')"
       ]
      },
-     "execution_count": 51,
+     "execution_count": 11,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -482,7 +482,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 60,
+   "execution_count": 12,
    "metadata": {
     "collapsed": true
    },
@@ -503,7 +503,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 61,
+   "execution_count": 13,
    "metadata": {
     "collapsed": true
    },
@@ -514,7 +514,7 @@
        "(1051, 5)"
       ]
      },
-     "execution_count": 61,
+     "execution_count": 13,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -539,27 +539,102 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
-   "metadata": {
-    "collapsed": true
-   },
-   "outputs": [],
+   "execution_count": 17,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "714"
+      ]
+     },
+     "execution_count": 17,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
-    "\n"
+    "# The number of unique articles that have an interaction with a user. \n",
+    "df['article_id'].nunique()"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 19,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "1051"
+      ]
+     },
+     "execution_count": 19,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "# The number of unique articles in the dataset (whether they have any interactions or not).\n",
+    "len(df_content_clean['article_id'])"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 20,
+   "metadata": {
+    "collapsed": true
+   },
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "5148"
+      ]
+     },
+     "execution_count": 20,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "# The number of unique users in the dataset. (excluding null values)\n",
+    "df['email'].nunique()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 23,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "45993"
+      ]
+     },
+     "execution_count": 23,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "# The number of user-article interactions in the dataset.\n",
+    "df.shape[0]"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 24,
    "metadata": {
     "collapsed": true
    },
    "outputs": [],
    "source": [
-    "unique_articles = # The number of unique articles that have at least one interaction\n",
-    "total_articles = # The number of unique articles on the IBM platform\n",
-    "unique_users = # The number of unique users\n",
-    "user_article_interactions = # The number of user-article interactions"
+    "unique_articles = 714 # The number of unique articles that have at least one interaction\n",
+    "total_articles = 1051 # The number of unique articles on the IBM platform\n",
+    "unique_users = 5148 # The number of unique users\n",
+    "user_article_interactions = 45993 # The number of user-article interactions"
    ]
   },
   {
@@ -571,32 +646,177 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 39,
    "metadata": {
     "collapsed": true
    },
-   "outputs": [],
-   "source": []
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>email</th>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>article_id</th>\n",
+       "      <th></th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>1429.0</th>\n",
+       "      <td>937</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>1330.0</th>\n",
+       "      <td>927</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>1431.0</th>\n",
+       "      <td>671</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>1427.0</th>\n",
+       "      <td>643</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>1364.0</th>\n",
+       "      <td>627</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "            email\n",
+       "article_id       \n",
+       "1429.0        937\n",
+       "1330.0        927\n",
+       "1431.0        671\n",
+       "1427.0        643\n",
+       "1364.0        627"
+      ]
+     },
+     "execution_count": 39,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "df[[\"email\", 'article_id']].groupby('article_id').count().sort_values(ascending=False, by='email').head(5)"
+   ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 38,
    "metadata": {
     "collapsed": true
    },
    "outputs": [],
    "source": [
-    "most_viewed_article_id = # The most viewed article in the dataset as a string with one value following the decimal \n",
-    "max_views = # The most viewed article in the dataset was viewed how many times?"
+    "most_viewed_article_id = '1429.0' # The most viewed article in the dataset as a string with one value following the decimal \n",
+    "max_views = 937 # The most viewed article in the dataset was viewed how many times?"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 40,
    "metadata": {
     "collapsed": true
    },
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>article_id</th>\n",
+       "      <th>title</th>\n",
+       "      <th>user_id</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>0</th>\n",
+       "      <td>1430.0</td>\n",
+       "      <td>using pixiedust for fast, flexible, and easier...</td>\n",
+       "      <td>1</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>1</th>\n",
+       "      <td>1314.0</td>\n",
+       "      <td>healthcare python streaming application demo</td>\n",
+       "      <td>2</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2</th>\n",
+       "      <td>1429.0</td>\n",
+       "      <td>use deep learning for image classification</td>\n",
+       "      <td>3</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>3</th>\n",
+       "      <td>1338.0</td>\n",
+       "      <td>ml optimization using cognitive assistant</td>\n",
+       "      <td>4</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>4</th>\n",
+       "      <td>1276.0</td>\n",
+       "      <td>deploy your python model as a restful api</td>\n",
+       "      <td>5</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "   article_id                                              title  user_id\n",
+       "0      1430.0  using pixiedust for fast, flexible, and easier...        1\n",
+       "1      1314.0       healthcare python streaming application demo        2\n",
+       "2      1429.0         use deep learning for image classification        3\n",
+       "3      1338.0          ml optimization using cognitive assistant        4\n",
+       "4      1276.0          deploy your python model as a restful api        5"
+      ]
+     },
+     "execution_count": 40,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
     "## No need to change the code here - this will be helpful for later parts of the notebook\n",
     "# Run this cell to map the user email to a user_id column and remove the email column\n",
@@ -624,11 +844,19 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 41,
    "metadata": {
     "collapsed": true
    },
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "It looks like you have everything right here! Nice job!\n"
+     ]
+    }
+   ],
    "source": [
     "## If you stored all your results in the variable names above, \n",
     "## you shouldn't need to change anything in this cell\n",
