Part II: Rank-Based Recommendations

--- a/src/recommendations_with_ibm.ipynb
+++ b/src/recommendations_with_ibm.ipynb
@@ -28,7 +28,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -40,7 +40,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 2,
    "metadata": {
     "collapsed": true
    },
@@ -54,7 +54,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [
     {
@@ -142,7 +142,7 @@
        "4  f01220c46fc92c6e6b161b1849de11faacd7ccb2  "
       ]
      },
-     "execution_count": 5,
+     "execution_count": 3,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -156,7 +156,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 4,
    "metadata": {
     "collapsed": true
    },
@@ -265,7 +265,7 @@
        "4      Analyze NY Restaurant data using Spark in DSX       Live           4  "
       ]
      },
-     "execution_count": 6,
+     "execution_count": 4,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -290,7 +290,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 5,
    "metadata": {
     "collapsed": true
    },
@@ -368,7 +368,7 @@
        "max     364.000000"
       ]
      },
-     "execution_count": 7,
+     "execution_count": 5,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -381,7 +381,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [
     {
@@ -406,7 +406,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [
     {
@@ -427,7 +427,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 8,
    "metadata": {
     "collapsed": true
    },
@@ -437,7 +437,7 @@
      "output_type": "stream",
      "text": [
       "50% of individuals interact with 3 articles or fewer.\n",
-      "The maximum number of user-article interactions by any 1 user is 364\n"
+      "The maximum number of user-article interactions by any 1 user is 364.\n"
      ]
     }
    ],
@@ -448,7 +448,7 @@
     "max_views_by_user = 364 # The maximum number of user-article interactions by any 1 user is ______.\n",
     "\n",
     "print(f'50% of individuals interact with {median_val} articles or fewer.')\n",
-    "print(f'The maximum number of user-article interactions by any 1 user is {max_views_by_user}')"
+    "print(f'The maximum number of user-article interactions by any 1 user is {max_views_by_user}.')"
    ]
   },
   {
@@ -460,29 +460,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
-   "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "Index(['doc_body', 'doc_description', 'doc_full_name', 'doc_status',\n",
-       "       'article_id'],\n",
-       "      dtype='object')"
-      ]
-     },
-     "execution_count": 11,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
-   "source": [
-    "df_content.columns"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 9,
    "metadata": {
     "collapsed": true
    },
@@ -503,7 +481,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": 10,
    "metadata": {
     "collapsed": true
    },
@@ -514,15 +492,15 @@
        "(1051, 5)"
       ]
      },
-     "execution_count": 13,
+     "execution_count": 10,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
     "# Remove any rows that have the same article_id - only keep the first\n",
-    "df_content_clean = df_content.drop_duplicates(\"article_id\", keep=\"first\")\n",
-    "df_content_clean.shape"
+    "df_content = df_content.drop_duplicates(\"article_id\", keep=\"first\")\n",
+    "df_content.shape"
    ]
   },
   {
@@ -539,7 +517,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 17,
+   "execution_count": 11,
    "metadata": {},
    "outputs": [
     {
@@ -548,7 +526,7 @@
        "714"
       ]
      },
-     "execution_count": 17,
+     "execution_count": 11,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -560,7 +538,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 19,
+   "execution_count": 12,
    "metadata": {},
    "outputs": [
     {
@@ -569,19 +547,19 @@
        "1051"
       ]
      },
-     "execution_count": 19,
+     "execution_count": 12,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
     "# The number of unique articles in the dataset (whether they have any interactions or not).\n",
-    "len(df_content_clean['article_id'])"
+    "len(df_content['article_id'])"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 20,
+   "execution_count": 13,
    "metadata": {
     "collapsed": true
    },
@@ -592,7 +570,7 @@
        "5148"
       ]
      },
-     "execution_count": 20,
+     "execution_count": 13,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -604,7 +582,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 23,
+   "execution_count": 14,
    "metadata": {},
    "outputs": [
     {
@@ -613,7 +591,7 @@
        "45993"
       ]
      },
-     "execution_count": 23,
+     "execution_count": 14,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -625,16 +603,32 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 24,
+   "execution_count": 15,
    "metadata": {
     "collapsed": true
    },
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "714 is the number of unique articles that have at least one interaction.\n",
+      "1051 is the number of unique articles on the IBM platform.\n",
+      "5148 is the number of unique users.\n",
+      "45993 is the number of user-article interactions.\n"
+     ]
+    }
+   ],
    "source": [
     "unique_articles = 714 # The number of unique articles that have at least one interaction\n",
     "total_articles = 1051 # The number of unique articles on the IBM platform\n",
     "unique_users = 5148 # The number of unique users\n",
-    "user_article_interactions = 45993 # The number of user-article interactions"
+    "user_article_interactions = 45993 # The number of user-article interactions\n",
+    "\n",
+    "print(f'{unique_articles} is the number of unique articles that have at least one interaction.')\n",
+    "print(f'{total_articles} is the number of unique articles on the IBM platform.')\n",
+    "print(f'{unique_users} is the number of unique users.')\n",
+    "print(f'{user_article_interactions} is the number of user-article interactions.')"
    ]
   },
   {
@@ -646,7 +640,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 39,
+   "execution_count": 16,
    "metadata": {
     "collapsed": true
    },
@@ -714,7 +708,7 @@
        "1364.0        627"
       ]
      },
-     "execution_count": 39,
+     "execution_count": 16,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -725,19 +719,31 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 38,
+   "execution_count": 17,
    "metadata": {
     "collapsed": true
    },
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "The most viewed article in the dataset was the article_id 1429.0\n",
+      "The most viewed article in the dataset was viewed 937 times.\n"
+     ]
+    }
+   ],
    "source": [
     "most_viewed_article_id = '1429.0' # The most viewed article in the dataset as a string with one value following the decimal \n",
-    "max_views = 937 # The most viewed article in the dataset was viewed how many times?"
+    "max_views = 937 # The most viewed article in the dataset was viewed how many times?\n",
+    "\n",
+    "print(f'The most viewed article in the dataset was the article_id {most_viewed_article_id}')\n",
+    "print(f'The most viewed article in the dataset was viewed {max_views} times.')"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 40,
+   "execution_count": 18,
    "metadata": {
     "collapsed": true
    },
@@ -812,7 +818,7 @@
        "4      1276.0          deploy your python model as a restful api        5"
       ]
      },
-     "execution_count": 40,
+     "execution_count": 18,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -844,7 +850,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 41,
+   "execution_count": 19,
    "metadata": {
     "collapsed": true
    },
@@ -889,7 +895,161 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 20,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>user_id</th>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>title</th>\n",
+       "      <th></th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>use deep learning for image classification</th>\n",
+       "      <td>937</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>insights from new york car accident reports</th>\n",
+       "      <td>927</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>visualize car data with brunel</th>\n",
+       "      <td>671</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>use xgboost, scikit-learn &amp; ibm watson machine learning apis</th>\n",
+       "      <td>643</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>predicting churn with the spss random tree algorithm</th>\n",
+       "      <td>627</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "                                                    user_id\n",
+       "title                                                      \n",
+       "use deep learning for image classification              937\n",
+       "insights from new york car accident reports             927\n",
+       "visualize car data with brunel                          671\n",
+       "use xgboost, scikit-learn & ibm watson machine ...      643\n",
+       "predicting churn with the spss random tree algo...      627"
+      ]
+     },
+     "execution_count": 20,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "df[[\"user_id\", 'title']].groupby('title').count().sort_values(ascending=False, by='user_id').head(5)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 21,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>user_id</th>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>article_id</th>\n",
+       "      <th></th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>1429.0</th>\n",
+       "      <td>937</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>1330.0</th>\n",
+       "      <td>927</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>1431.0</th>\n",
+       "      <td>671</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>1427.0</th>\n",
+       "      <td>643</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>1364.0</th>\n",
+       "      <td>627</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "            user_id\n",
+       "article_id         \n",
+       "1429.0          937\n",
+       "1330.0          927\n",
+       "1431.0          671\n",
+       "1427.0          643\n",
+       "1364.0          627"
+      ]
+     },
+     "execution_count": 21,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "df[[\"user_id\", 'article_id']].groupby('article_id').count().sort_values(ascending=False, by='user_id').head(5)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 22,
    "metadata": {
     "collapsed": true
    },
@@ -906,6 +1066,7 @@
     "    \n",
     "    '''\n",
     "    # Your code here\n",
+    "    top_articles = df.groupby('title')['user_id'].count().sort_values(ascending=False).head(n).index.to_list()\n",
     "    \n",
     "    return top_articles # Return the top article titles from df (not df_content)\n",
     "\n",
@@ -920,17 +1081,27 @@
     "    \n",
     "    '''\n",
     "    # Your code here\n",
+    "    top_articles = df.groupby('article_id')['user_id'].count().sort_values(ascending=False).head(n).index.to_list()\n",
     " \n",
     "    return top_articles # Return the top article ids"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 23,
    "metadata": {
     "collapsed": true
    },
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "['use deep learning for image classification', 'insights from new york car accident reports', 'visualize car data with brunel', 'use xgboost, scikit-learn & ibm watson machine learning apis', 'predicting churn with the spss random tree algorithm', 'healthcare python streaming application demo', 'finding optimal locations of new store using decision optimization', 'apache spark lab, part 1: basic concepts', 'analyze energy consumption in buildings', 'gosales transactions for logistic regression model']\n",
+      "[1429.0, 1330.0, 1431.0, 1427.0, 1364.0, 1314.0, 1293.0, 1170.0, 1162.0, 1304.0]\n"
+     ]
+    }
+   ],
    "source": [
     "print(get_top_articles(10))\n",
     "print(get_top_article_ids(10))"
@@ -938,11 +1109,21 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 24,
    "metadata": {
     "collapsed": true
    },
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Your top_5 looks like the solution list! Nice job.\n",
+      "Your top_10 looks like the solution list! Nice job.\n",
+      "Your top_20 looks like the solution list! Nice job.\n"
+     ]
+    }
+   ],
    "source": [
     "# Test your function by returning the top 5, 10, and 20 articles\n",
     "top_5 = get_top_articles(5)\n",
