--- a/src/recommendations_with_ibm.ipynb
+++ b/src/recommendations_with_ibm.ipynb
@@ -28,7 +28,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 27,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -40,7 +40,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 28,
    "metadata": {
     "collapsed": true
    },
@@ -54,7 +54,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 29,
    "metadata": {},
    "outputs": [
     {
@@ -142,7 +142,7 @@
        "4  f01220c46fc92c6e6b161b1849de11faacd7ccb2  "
       ]
      },
-     "execution_count": 3,
+     "execution_count": 29,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -156,7 +156,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 30,
    "metadata": {
     "collapsed": true
    },
@@ -265,7 +265,7 @@
        "4      Analyze NY Restaurant data using Spark in DSX       Live           4  "
       ]
      },
-     "execution_count": 4,
+     "execution_count": 30,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -290,7 +290,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 31,
    "metadata": {
     "collapsed": true
    },
@@ -368,7 +368,7 @@
        "max     364.000000"
       ]
      },
-     "execution_count": 5,
+     "execution_count": 31,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -381,7 +381,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 32,
    "metadata": {},
    "outputs": [
     {
@@ -406,7 +406,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 33,
    "metadata": {},
    "outputs": [
     {
@@ -427,7 +427,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 34,
    "metadata": {
     "collapsed": true
    },
@@ -460,7 +460,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 35,
    "metadata": {
     "collapsed": true
    },
@@ -481,7 +481,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 36,
    "metadata": {
     "collapsed": true
    },
@@ -492,7 +492,7 @@
        "(1051, 5)"
       ]
      },
-     "execution_count": 10,
+     "execution_count": 36,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -517,7 +517,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 37,
    "metadata": {},
    "outputs": [
     {
@@ -526,7 +526,7 @@
        "714"
       ]
      },
-     "execution_count": 11,
+     "execution_count": 37,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -538,7 +538,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 38,
    "metadata": {},
    "outputs": [
     {
@@ -547,7 +547,7 @@
        "1051"
       ]
      },
-     "execution_count": 12,
+     "execution_count": 38,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -559,7 +559,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": 39,
    "metadata": {
     "collapsed": true
    },
@@ -570,7 +570,7 @@
        "5148"
       ]
      },
-     "execution_count": 13,
+     "execution_count": 39,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -582,7 +582,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 14,
+   "execution_count": 40,
    "metadata": {},
    "outputs": [
     {
@@ -591,7 +591,7 @@
        "45993"
       ]
      },
-     "execution_count": 14,
+     "execution_count": 40,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -603,7 +603,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 15,
+   "execution_count": 41,
    "metadata": {
     "collapsed": true
    },
@@ -640,7 +640,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 16,
+   "execution_count": 42,
    "metadata": {
     "collapsed": true
    },
@@ -708,7 +708,7 @@
        "1364.0        627"
       ]
      },
-     "execution_count": 16,
+     "execution_count": 42,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -719,7 +719,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 17,
+   "execution_count": 43,
    "metadata": {
     "collapsed": true
    },
@@ -743,7 +743,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 18,
+   "execution_count": 44,
    "metadata": {
     "collapsed": true
    },
@@ -818,7 +818,7 @@
        "4      1276.0          deploy your python model as a restful api        5"
       ]
      },
-     "execution_count": 18,
+     "execution_count": 44,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -850,7 +850,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 19,
+   "execution_count": 45,
    "metadata": {
     "collapsed": true
    },
@@ -895,7 +895,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 20,
+   "execution_count": 46,
    "metadata": {},
    "outputs": [
     {
@@ -961,7 +961,7 @@
        "predicting churn with the spss random tree algo...      627"
       ]
      },
-     "execution_count": 20,
+     "execution_count": 46,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -972,7 +972,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 21,
+   "execution_count": 47,
    "metadata": {},
    "outputs": [
     {
@@ -1038,7 +1038,7 @@
        "1364.0          627"
       ]
      },
-     "execution_count": 21,
+     "execution_count": 47,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1049,7 +1049,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 22,
+   "execution_count": 48,
    "metadata": {
     "collapsed": true
    },
@@ -1088,7 +1088,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 23,
+   "execution_count": 49,
    "metadata": {
     "collapsed": true
    },
@@ -1109,7 +1109,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 24,
+   "execution_count": 50,
    "metadata": {
     "collapsed": true
    },
@@ -1159,7 +1159,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 51,
    "metadata": {
     "collapsed": true
    },
@@ -1180,6 +1180,8 @@
     "    an article and a 0 otherwise\n",
     "    '''\n",
     "    # Fill in the function here\n",
+    "    user_item = pd.crosstab(df['user_id'], df['article_id'])\n",
+    "    user_item[user_item > 0] = 1\n",
     "    \n",
     "    return user_item # return the user_item matrix \n",
     "\n",
@@ -1188,11 +1190,19 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 53,
    "metadata": {
     "collapsed": true
    },
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "You have passed our quick tests!  Please proceed!\n"
+     ]
+    }
+   ],
    "source": [
     "## Tests: You should just need to run this cell.  Don't change the code.\n",
     "assert user_item.shape[0] == 5149, \"Oops!  The number of users in the user-article matrix doesn't look right.\"\n",
@@ -1212,7 +1222,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 54,
    "metadata": {
     "collapsed": true
    },
@@ -1234,13 +1244,26 @@
     "    Returns an ordered\n",
     "    \n",
     "    '''\n",
+    "    # Get user_ids\n",
+    "    user_ids = user_item.index\n",
+    "\n",
     "    # compute similarity of each user to the provided user\n",
+    "    dot_product_matrix = np.dot(user_item.values, user_item.values.T)\n",
+    "    \n",
+    "    # Convert to DataFrame for better interpretation\n",
+    "    dot_product_df = pd.DataFrame(dot_product_matrix, index=user_ids, columns=user_ids)\n",
     "\n",
-    "    # sort by similarity\n",
+    "    # Get the similarity scores for the provided user\n",
+    "    user_similarity_scores = dot_product_df[user_id].copy()\n",
     "\n",
-    "    # create list of just the ids\n",
-    "   \n",
-    "    # remove the own user's id\n",
+    "    # Remove the provided user from the list (set similarity with itself to -1 or NaN)\n",
+    "    user_similarity_scores.loc[user_id] = -1\n",
+    "\n",
+    "    # Sort the users by similarity score in descending order\n",
+    "    sorted_users = user_similarity_scores.sort_values(ascending=False)\n",
+    "\n",
+    "    # Get the list of user IDs ordered from most similar to least similar\n",
+    "    most_similar_users = sorted_users.index.tolist()\n",
     "       \n",
     "    return most_similar_users # return a list of the users in order from most to least similar\n",
     "        "
@@ -1248,11 +1271,21 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 55,
    "metadata": {
     "collapsed": true
    },
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "The 10 most similar users to user 1 are: [3933, 3782, 23, 203, 4459, 131, 3870, 46, 4201, 5041]\n",
+      "The 5 most similar users to user 3933 are: [1, 23, 3782, 4459, 203]\n",
+      "The 3 most similar users to user 46 are: [4201, 23, 3782]\n"
+     ]
+    }
+   ],
    "source": [
     "# Do a spot check of your function\n",
     "print(\"The 10 most similar users to user 1 are: {}\".format(find_similar_users(1)[:10]))\n",
@@ -1269,7 +1302,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 60,
    "metadata": {
     "collapsed": true
    },
@@ -1286,6 +1319,7 @@
     "                    (this is identified by the title column)\n",
     "    '''\n",
     "    # Your code here\n",
+    "    article_names = [df[df['article_id']==float(id)]['title'].values[0] for id in article_ids]\n",
     "    \n",
     "    return article_names # Return the article names associated with list of article ids\n",
     "\n",
@@ -1306,6 +1340,10 @@
     "    Provides a list of the article_ids and article titles that have been seen by a user\n",
     "    '''\n",
     "    # Your code here\n",
+    "    article_ids = user_item.loc[user_id]\n",
+    "    article_ids =  [str(aid) for aid in article_ids[article_ids == 1].index]\n",
+    "    \n",
+    "    article_names = get_article_names(article_ids)\n",
     "    \n",
     "    return article_ids, article_names # return the ids and names\n",
     "\n",
@@ -1332,17 +1370,42 @@
     "    \n",
     "    '''\n",
     "    # Your code here\n",
+    "    user_ids = find_similar_users(user_id)\n",
     "    \n",
-    "    return recs # return your recommendations for this user_id    "
+    "    recs = df[df['user_id'].isin(user_ids)]['article_id']\n",
+    "    \n",
+    "    recs = list(set(recs))\n",
+    "    \n",
+    "    return recs[:m] # return your recommendations for this user_id   "
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 57,
    "metadata": {
     "collapsed": true
    },
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "['detect malfunctioning iot sensors with streaming analytics',\n",
+       " 'this week in data science (april 18, 2017)',\n",
+       " 'analyze ny restaurant data using spark in dsx',\n",
+       " 'data science bowl 2017',\n",
+       " '3992    using apache spark to predict attack vectors a...\\nName: title, dtype: object',\n",
+       " 'timeseries data analysis of iot events by using jupyter notebook',\n",
+       " 'got zip code data? prep it for analytics. – ibm watson data lab – medium',\n",
+       " 'apache spark™ 2.0: extend structured streaming for spark ml',\n",
+       " 'higher-order logistic regression for large datasets',\n",
+       " 'the greatest public datasets for ai – startup grind']"
+      ]
+     },
+     "execution_count": 57,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
     "# Check Results\n",
     "get_article_names(user_user_recs(1, 10)) # Return 10 recommendations for user 1"
@@ -1350,11 +1413,19 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 62,
    "metadata": {
     "collapsed": true
    },
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "If this is all you see, you passed all of our tests!  Nice job!\n"
+     ]
+    }
+   ],
    "source": [
     "# Test your functions here - No need to change this code - just run this cell\n",
     "assert set(get_article_names(['1024.0', '1176.0', '1305.0', '1314.0', '1422.0', '1427.0'])) == set(['using deep learning to reconstruct high-resolution audio', 'build a python app on the streaming analytics service', 'gosales transactions for naive bayes model', 'healthcare python streaming application demo', 'use r dataframes & ibm watson natural language understanding', 'use xgboost, scikit-learn & ibm watson machine learning apis']), \"Oops! Your the get_article_names function doesn't work quite how we expect.\"\n",
